# tele-codex

./: .gitignore  LICENSE  README.md  app_server_watch.py  codex_watch.py  config.example.toml  pyproject.toml  telegram.example.json  telegram_notify.py  test_app_server_watch.py  test_codex_watch.py  test_telegram_notify.py
.github/workflows/: tests.yml
tele_codex/: __init__.py  __main__.py  app_server.py  codex_runner.py  config.py  messages.py  notifier.py  telegram.py
tests/: __init__.py  test_app_server_watch.py  test_codex_watch.py  test_telegram_notify.py
